--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
-}
+/* App.css */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Contenedor principal de la aplicación */
+.app-container {
+    max-width: 800px;
+    margin: 20px; /* Agrega márgenes a cada lado */
+    padding: 20px;
+    background-color: #f4f4f4;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Estilo del título */
+  h1 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #333;
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Contenedor de búsqueda */
+  .search-container {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    align-items: stretch;
+    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: center;
   }
-}
+  
+  /* Estilos del campo de entrada */
+  input[type="text"],
+  select {
+    flex: 1;
+    padding: 12px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s;
+    width: 100%;
+    max-width: 100%;
+  }
+  
+  /* Cambio de estilo al pasar el cursor sobre los elementos */
+  input[type="text"]:hover,
+  input[type="text"]:focus,
+  select:hover,
+  select:focus {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  /* Estilo del botón de búsqueda */
+  button {
+    padding: 12px 20px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+  
+  /* Cambio de estilo al pasar el cursor sobre el botón */
+  button:hover {
+    background-color: #0056b3;
+  }
+  
+  /* Estilos del mensaje de error */
+  .error-message {
+    color: red;
+  }
