--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -7,17 +7,21 @@
   }
   
   .book-image {
-    width: 150px; /* Ajusta el tamaño de la imagen según sea necesario */
-    height: 200px; /* Ajusta el tamaño de la imagen según sea necesario */
+    width: auto; /* Establece el ancho de la imagen al 100% del contenedor */
+    height: auto; /* Establece la altura de la imagen al 100% del contenedor */
+    max-width: 100px; /*Ancho máximo para evitar que la imagen se vuelva excesivamente grande */
+    max-height: 200px; /* Altura máxima para evitar que la imagen se vuelva excesivamente alta */
     margin-right: 20px; /* Espacio entre la imagen y la información del libro */
   }
   
   .image-placeholder {
-    width: 100%;
-    height: 100%;
+    width: 100%; /* Asegura que la imagen simulada ocupe todo el espacio disponible dentro del contenedor */
+    height: 100%; /* Asegura que la imagen simulada ocupe todo el espacio disponible dentro del contenedor */
     background-color: #ccc; /* Color de fondo de la imagen simulada */
     border-radius: 8px; /* Bordes redondeados para la imagen simulada */
+
   }
+  
   
   .book-details {
     flex: 1; /* La información del libro ocupará todo el espacio disponible */
