--- a/src/BookDetail.css
+++ b/src/BookDetail.css
@@ -23,6 +23,7 @@
     display: flex; /* Flexbox */
     flex-direction: column; /* Dirección de la columna */
     justify-content: space-between; /* Justificar el contenido */
+    color: #000;
 }
 
 .visual {
@@ -45,10 +46,13 @@
     width: 100%;
     height: 270px;
     text-align: right;
+    margin-right: 100px;
+    color: #000;
 }
 
 .sinop {
     margin-right: 100px;
+    color: #000;
 }
 
 .caja_descripcion {
