--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -6,23 +6,6 @@
     border-radius: 8px;
   }
   
-  .book-image {
-    width: auto; /* Establece el ancho de la imagen al 100% del contenedor */
-    height: auto; /* Establece la altura de la imagen al 100% del contenedor */
-    max-width: 100px; /*Ancho máximo para evitar que la imagen se vuelva excesivamente grande */
-    max-height: 200px; /* Altura máxima para evitar que la imagen se vuelva excesivamente alta */
-    margin-right: 20px; /* Espacio entre la imagen y la información del libro */
-  }
-  
-  .image-placeholder {
-    width: 100%; /* Asegura que la imagen simulada ocupe todo el espacio disponible dentro del contenedor */
-    height: 100%; /* Asegura que la imagen simulada ocupe todo el espacio disponible dentro del contenedor */
-    background-color: #ccc; /* Color de fondo de la imagen simulada */
-    border-radius: 8px; /* Bordes redondeados para la imagen simulada */
-
-  }
-  
-  
   .book-details {
     flex: 1; /* La información del libro ocupará todo el espacio disponible */
   }
@@ -41,7 +24,12 @@
   
   .book-info hr {
     margin-top: 16px;
-    
     border-top: 16px solid #ccc;
   }
-  
+
+  .portada {
+    width: auto; /* Establece el ancho de la imagen al 100% del contenedor */
+    height: auto; /* Establece la altura de la imagen al 100% del contenedor */
+    max-width: 150px; /*Ancho máximo para evitar que la imagen se vuelva excesivamente grande */
+    margin-right: 20px; /* Espacio entre la imagen y la información del libro */
+  }
